--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-NODE_TLS_REJECT_UNAUTHORIZED=0
+NODE_TLS_REJECT_UNAUTHORIZED = 0
+DB_CONNECTION_LIMIT          = 50
+DB_HOST                      = localhost
+DB_USER                      = root
+DB_PASS                      = password
+DB_DATABASE                  = bd_autolinea_31_07_20
+DB_PORT                      = 3307
